[tool.poetry]
name = "pyleniumio"
version = "1.20.0"
description = "The best of Selenium and Cypress in a single Python Package"
authors = ["Carlos <carlos@qap.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pylenium" }]

[tool.poetry.scripts]
pylenium = "pylenium.scripts.cli:app"

[tool.poetry.dependencies]
python = ">=3.8.1"
requests = "^2.31.0"
pytest-xdist = "^3.3.1"
axe-selenium-python = "^2.1.6"
selenium-wire = "^5.1.0"
allure-pytest = "^2.13.2"
typer = { version = "^0.9.0", extras = ["all"] }
selenium = "^4.11.2"
pydantic = "^2.3.0"
faker = "^19.3.1"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
pytest-cov = "4.1.0"
flake8 = "^6.0.0"
poethepoet = "^0.22.0"

[tool.black]
line-length = 160

[tool.poe.tasks]
lint = { "cmd" = "flake8 pylenium tests", "help" = "Run Flake8 Linter" }
test-unit = { "cmd" = "pytest tests/unit --cov=. --cov-report term-missing -n 4", "help" = "Run Unit Tests and get Code Coverage Report" }
test-ui = { "cmd" = "pytest tests/ui --cov=. --cov-report term-missing -n 2", "help" = "Run UI Tests" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
