[tool.poetry]
name = "pyleniumio"
version = "1.20.1"
description = "The best of Selenium and Cypress in a single Python Package"
authors = ["Carlos <carlos@qap.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pylenium" }]

[tool.poetry.scripts]
pylenium = "pylenium.scripts.cli:app"

[tool.poetry.dependencies]
python = ">=3.8.1"
requests = "^2.31.0"
pytest-xdist = "^3.5.0"
axe-selenium-python = "^2.1.6"
selenium-wire = "^5.1.0"
allure-pytest = "^2.13.2"
typer = { version = "^0.9.0", extras = ["all"] }
selenium = "^4.17.2"
pydantic = "^2.6.1"
faker = "^23.1.0"
pytest = "^8.0.0"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
pytest-cov = "4.1.0"
flake8 = "^7.0.0"
poethepoet = "^0.24.4"

[tool.black]
line-length = 160

[tool.poe.tasks]
lint = { "cmd" = "flake8 pylenium tests", "help" = "Run Flake8 Linter" }
test-unit = { "cmd" = "pytest tests/unit --cov=. --cov-report term-missing -n 4", "help" = "Run Unit Tests and get Code Coverage Report" }
test-ui = { "cmd" = "pytest tests/ui --cov=. --cov-report term-missing -n 2", "help" = "Run UI Tests" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
